# FuseEngine

./: .clang-format  .clang-format-ignore  .clang-tidy  .editorconfig  .git-blame-ignore-rev  .gitignore  CMakeLists.txt  CMakePresets.json  CMakelists.txt  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: CompilerWarning.cmake  FindClangTidy.cmake  PreventInSourceBuilds.cmake
docs/: CMakeLists.txt
misc/vcpkg/overlay/dbus/: vcpkg.json
misc/vcpkg/overlay/imgui/: portfile.cmake  readme.md
misc/vcpkg/overlay/spdlog/: portfile.cmake  readme.md  vcpkg.json
sandbox/: Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  PlayerScript.cpp  PlayerScript.h  SandboxApplication.cpp  SandboxApplication.h  Timer.cpp  Timer.h  main.cpp
scripts/: RunClangFormat.cmake
src/: CMakeLists.txt  fuse.cpp  fuse.h
src/FuseApp/: Application.cpp  Application.h  CMakeLists.txt  Event.cpp  Event.h  Keyboard.cpp  Keyboard.h  SceneRenderer.cpp  SceneRenderer.h  Timer.cpp  Timer.h  TransformerSystem.cpp  TransformerSystem.h  Window.cpp  Window.h
src/FuseApp/ImGui/: Widget.h
src/FuseApp/SDL3/: SDL3Error.cpp  SDL3Error.h  SDL3Helper.cpp  SDL3Helper.h
src/FuseCore/: CMakeLists.txt  Input.cpp  Input.h
src/FuseCore/fileSystem/: FileSystem.cpp  FileSystem.h
src/FuseCore/math/: Angle.h  Mat4.cpp  Mat4.h  Vec3.h  Vec4.h
src/FuseCore/scene/: Components.h  Entity.h  NativeScriptSystem.cpp  NativeScriptSystem.h  Scene.cpp  Scene.h
src/FuseCore/scene/components/: CNativeScript.h  Components.h
src/FuseCore/utils/: EnumFlags.h  EnumUtils.h  EnumUtils.inc.h  GetTypeName.h  GetTypeName.inc.h  TypeTraits.h  UUID.h
src/FuseEditor/: CMakeLists.txt  EditorApplication.cpp  EditorApplication.h  EditorCamera.cpp  EditorCamera.h  main.cpp
src/FuseEditor/embed/: .clang-format-ignore
src/FuseEditor/panel/: EditorPanel.h  InspectorPanel.cpp  InspectorPanel.h  LogPanel.cpp  LogPanel.h  SceneHierachyPanel.cpp  SceneHierachyPanel.h  ScenePanel.cpp  ScenePanel.h
tests/: CMakeLists.txt  CMakelists.txt  GtestUtils.cpp  GtestUtils.h  Test.cpp  TestAngle.cpp  TestEntity.cpp  TestEnum.cpp  TestEnumFlags.cpp  TestGetTypeName.cpp  TestMat4.cpp  TestScene.cpp  TestVec3.cpp  TestVec4.cpp
