find_package(Doxygen REQUIRED)

set(DOXYGEN_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
set(DOXYGEN_QUIET YES)
set(DOXYGEN_USE_MATHJAX YES)
set(DOXYGEN_EXTRACT_ALL NO)
set(DOXYGEN_WARN_AS_ERROR NO)
set(DOXYGEN_WARN_NO_PARAMDOC YES)
set(DOXYGEN_WARN_IF_UNDOC_ENUM_VAL YES)
set(DOXYGEN_RECURSIVE YES)
set(DOXYGEN_GENERATE_LATEX YES)
doxygen_add_docs(
    FuseDocs
    ${PROJECT_SOURCE_DIR}/src
    COMMENT "Generating doxygen documentation."
)
